# commons-codec

./: .gitignore  .readthedocs.yml  CHANGES.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
doc/: backlog.md  conf.py  decode.md  development.md  index.md  prior-art.md  telemetry.md  transform.md
doc/cdc/: index.md  mongodb.md
doc/zyp/: backlog.md  examples.md  index.md  research.md
docs/: backlog.md  mongodb.md
examples/: mongodb_cdc_cratedb.py
src/commons_codec/: exception.py  model.py
src/commons_codec/decode/: airrohr.py  sensor_community.py  tts_ttn.py
src/commons_codec/transform/: aws_dms.py  dynamodb.py  dynamodb_model.py  mongodb.py
src/commons_codec/util/: data.py  io.py
src/data_x/decode/: airrohr.py  tasmota.py
src/data_x/transform/: dynamodb.py
src/zyp/: __init__.py  function.jq  function.py
src/zyp/model/: __init__.py  base.py  bucket.py  collection.py  fluent.py  moksha.py  project.py  treatment.py
src/zyp/util/: data.py  expression.py  locator.py
tests/: conftest.py  test_model.py
tests/decode/: test_airrohr.py  test_sensor_community.py  test_tasmota.py  test_tts_ttn.py
tests/transform/: conftest.py  test_aws_dms.py  test_aws_dms_direct.py  test_aws_dms_universal.py  test_cratedb.py  test_dynamodb.py  test_dynamodb_cdc.py  test_dynamodb_full.py  test_dynamodb_model.py  test_dynamodb_types.py  test_dynamodb_types_cratedb.py  test_dynamodb_types_vanilla.py  test_model.py  test_mongodb.py  test_mongodb_cdc.py  test_mongodb_convert.py  test_mongodb_data.py  test_mongodb_full.py  test_zyp_generic.py
tests/transform/mongodb/: __init__.py  data.py  test_mongodb_cdc.py  test_mongodb_convert.py  test_mongodb_full.py
tests/util/: test_data.py
tests/zyp/: conftest.py  test_bucket.py  test_collection.py  test_function.py  test_locator.py  test_model.py  test_moksha.py  test_project.py  test_treatment.py  test_util.py  transformation-bucket.json  transformation-collection-treatment.yaml  transformation-collection.yaml
tests/zyp/integration/: conftest.py
tests/zyp/moksha/: test_jq.py  test_model.py  test_transon.py
